Fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ ul {
 }
 
 .development-skills {
-	margin-bottom: 2rem;
+	margin-bottom: 1.8rem;
 }
 
 .skills-label {
